force-app/main/default/objects/custom_create35__c/custom_create35__c.object-meta.xml
<CustomObject>
    <label>Custom created object35</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects35</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>