force-app/main/default/objects/custom_create35__c/fields/custom_create_35field628__c.field-meta.xml
<CustomField>
    <fullName>custom_create_35field628__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 35field628</label>
    <type>Checkbox</type>
</CustomField>