force-app/main/default/objects/custom_create35__c/fields/custom_create_35field645__c.field-meta.xml
<CustomField>
    <fullName>custom_create_35field645__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 35field645</label>
    <type>Checkbox</type>
</CustomField>